src/main/java/examples/Basic/invalid/BasicSendWithInvalidFrom.java
package examples.Basic.invalid;

import com.socketLabs.injectionApi.SendResponse;
import examples.Example;

public class BasicSendWithInvalidFrom implements Example {

    public SendResponse RunExample ()  throws Exception {
        return null;
    }
}
